fix mobile layout issues

--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -109,4 +109,8 @@
   .blur-3 {
     filter: blur(0.3rem);
   }
+
+  .touch-none {
+    touch-action: none;
+  }
 }
